# MetalVegetation

./: .gitignore  CMakeLists.txt  README.md  dev-notes.ipynb
src/: Camera.cpp  Camera.hpp  GroundShaders.metal  MetalLayerBridge.h  MetalLayerBridge.mm  Renderer.cpp  Renderer.hpp  ShaderTypes.h  Shaders.metal  SkyShaders.metal  Texture.cpp  Texture.hpp  TrampleCompute.metal  main.cpp
